added convenience methods to retrieve artefacts and projects by submitting simple text search values