@@ -3,10 +3,8 @@ package eu.scasefp7.assetregistry.service.es;
 import eu.scasefp7.assetregistry.data.Artefact;
 import eu.scasefp7.assetregistry.data.PrivacyLevel;
 import eu.scasefp7.assetregistry.data.Project;
-import eu.scasefp7.assetregistry.dto.ArtefactDTO;
 import eu.scasefp7.assetregistry.dto.JsonProject;
 import eu.scasefp7.assetregistry.dto.ProjectDTO;
-import eu.scasefp7.assetregistry.index.ArtefactIndex;
 import eu.scasefp7.assetregistry.index.IndexType;
 import eu.scasefp7.assetregistry.index.ProjectIndex;
 import eu.scasefp7.assetregistry.service.ProjectService;
@@ -15,6 +13,9 @@ import org.elasticsearch.action.index.IndexResponse;
 import org.elasticsearch.action.search.SearchResponse;
 import org.elasticsearch.action.update.UpdateResponse;
 import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.index.query.BoolFilterBuilder;
+import org.elasticsearch.index.query.BoolQueryBuilder;
+import org.elasticsearch.index.query.FilterBuilders;
 import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.index.query.QueryBuilders;
 import org.elasticsearch.search.SearchHit;
@@ -29,6 +30,9 @@ import java.util.ArrayList;
 import java.util.List;
 
 import static org.elasticsearch.common.xcontent.XContentFactory.jsonBuilder;
+import static org.elasticsearch.index.query.FilterBuilders.queryFilter;
+import static org.elasticsearch.index.query.QueryBuilders.matchQuery;
+import static org.elasticsearch.index.query.QueryBuilders.multiMatchQuery;
 
 /**
  * Service class for Project related ElasticSearch operations
@@ -53,11 +57,50 @@ public class ProjectEsServiceImpl extends AbstractEsServiceImpl<Project> impleme
     }
 
     @Override
-    public List<ProjectDTO> findByDomainAndSubdomain(String domain, String subdomain){
-        QueryBuilder querybuilder = QueryBuilders.boolQuery().must(QueryBuilders.matchQuery(ProjectIndex.DOMAIN_FIELD, domain)).must(QueryBuilders.matchQuery(ProjectIndex.SUBDOMAIN_FIELD,subdomain));
+    public List<ProjectDTO> find(String query, String domain, String subdomain) {
+
+        QueryBuilder qb;
+
+        if (null != query) {
+
+            qb = QueryBuilders.matchQuery("_all", query);
+
+            if (query.contains("+") || query.contains(" ")) {
+                query = query.replace("+", " ");
+                qb = multiMatchQuery(query, "_all");
+            }
+
+            if (null != domain || null != subdomain) {
+
+                QueryBuilder matchClause = qb;
+
+                BoolFilterBuilder boolFilter = FilterBuilders.boolFilter();
+
+                if (null != domain) {
+                    boolFilter.must(queryFilter(matchQuery(ProjectIndex
+                            .DOMAIN_FIELD, domain)));
+                }
+                if (null != subdomain) {
+                    boolFilter.must(queryFilter(matchQuery(ProjectIndex
+                            .SUBDOMAIN_FIELD, subdomain)));
+                }
+                qb = QueryBuilders.filteredQuery(matchClause,
+                        boolFilter);
+            }
+        } else {
+            qb = QueryBuilders.boolQuery();
+            if (null != domain) {
+                ((BoolQueryBuilder) qb).must(QueryBuilders.matchQuery(ProjectIndex
+                        .DOMAIN_FIELD, domain));
+            }
+            if (null != subdomain) {
+                ((BoolQueryBuilder) qb).must(QueryBuilders.matchQuery(ProjectIndex.SUBDOMAIN_FIELD, subdomain));
+            }
+        }
 
         SearchResponse response = getSearchResponse(ProjectIndex.INDEX_NAME, IndexType
-                .TYPE_PROJECT, querybuilder);
+                .TYPE_PROJECT, qb);
+
         return getProjectDTOs(response);
     }
 
@@ -83,7 +126,7 @@ public class ProjectEsServiceImpl extends AbstractEsServiceImpl<Project> impleme
     public UpdateResponse updatePrivacyLevel(final long id, final PrivacyLevel privacyLevel) throws IOException {
 
         UpdateResponse response = connectorService.getClient().prepareUpdate(ProjectIndex.INDEX_NAME,
-                IndexType.TYPE_PROJECT, new Long(id).toString()).setDoc(jsonBuilder().startObject
+                IndexType.TYPE_PROJECT, Long.toString(id)).setDoc(jsonBuilder().startObject
                 ().field(ProjectIndex.PRIVACY_LEVEL_FIELD, privacyLevel).endObject()).get();
 
         return response;
@@ -93,18 +136,24 @@ public class ProjectEsServiceImpl extends AbstractEsServiceImpl<Project> impleme
         final List<ProjectDTO> result = new ArrayList<ProjectDTO>();
         for (SearchHit hit : response.getHits().hits()) {
 
-            String projectId = hit.getId();
-            LOG.info("found {} because of {}", projectId, hit.getExplanation());
+            String documentId = hit.getId();
+            LOG.info("found {} because of {}", documentId, hit.getExplanation());
 
-            final Project project = dbService.find(new Long(projectId));
-            if(null!=project) {
-                final JsonProject jsonProject = projectService.convertEntityToJson(project);
-                ProjectDTO dto = new ProjectDTO();
-                dto.setProject(jsonProject);
-                dto.setScore(hit.getScore());
-                result.add(dto);
-            }else{
-                LOG.warn("Project with id " + projectId + "could not be loaded");
+            try {
+                Long projectId = Long.valueOf(documentId);
+                final Project project = dbService.find(projectId);
+                if (null != project) {
+                    final JsonProject jsonProject = projectService.convertEntityToJson(project);
+                    ProjectDTO dto = new ProjectDTO();
+                    dto.setProject(jsonProject);
+                    dto.setScore(hit.getScore());
+                    result.add(dto);
+                } else {
+                    LOG.warn("Project with id " + projectId + "could not be loaded");
+                }
+
+            } catch (NumberFormatException ex) {
+                LOG.error("Elastic document ID " + documentId + " could not be converted into a number. ", ex);
             }
         }
         return result;
@@ -113,7 +162,7 @@ public class ProjectEsServiceImpl extends AbstractEsServiceImpl<Project> impleme
     private XContentBuilder builder(Project project) throws IOException {
         Long[] artefactIds = null;
 
-        if(null!=project.getArtefacts()) {
+        if (null != project.getArtefacts()) {
             artefactIds = new Long[project.getArtefacts().size()];
             List<Artefact> artefacts = project.getArtefacts();
             for (int i = 0; i < artefacts.size(); i++) {
@@ -124,8 +173,9 @@ public class ProjectEsServiceImpl extends AbstractEsServiceImpl<Project> impleme
         XContentBuilder builder = jsonBuilder().startObject()
                 .field(ProjectIndex.NAME_FIELD, project.getName())
                 .field(ProjectIndex.PRIVACY_LEVEL_FIELD, project.getPrivacyLevel())
-                .field(ProjectIndex.DOMAIN_FIELD, (null!=project.getDomain() ? project.getDomain().getName() : null))
-                .field(ProjectIndex.SUBDOMAIN_FIELD, ( null!= project.getSubDomain() ? project.getSubDomain().getName(): null))
+                .field(ProjectIndex.DOMAIN_FIELD, (null != project.getDomain() ? project.getDomain().getName() : null))
+                .field(ProjectIndex.SUBDOMAIN_FIELD, (null != project.getSubDomain() ? project.getSubDomain().getName
+                        () : null))
                 .field(ProjectIndex.CREATED_BY_FIELD, project.getCreatedBy())
                 .field(ProjectIndex.UPDATED_BY_FIELD, project.getUpdatedBy())
                 .field(ProjectIndex.CREATED_AT_FIELD, project.getCreatedAt())
@@ -135,28 +185,4 @@ public class ProjectEsServiceImpl extends AbstractEsServiceImpl<Project> impleme
 
         return builder;
     }
-
-    /**
-    private Map<String, Object> generateObjectMap(Project project) {
-        Map<String, Object> objectMap = new HashMap<String, Object>();
-        objectMap.put(ProjectIndex.NAME_FIELD, project.getName());
-        objectMap.put(ProjectIndex.PRIVACY_LEVEL_FIELD, project.getPrivacyLevel());
-        objectMap.put(ProjectIndex.DOMAIN_FIELD, project.getDomain().getName());
-        objectMap.put(ProjectIndex.SUBDOMAIN_FIELD, project.getSubDomain().getName());
-        objectMap.put(ProjectIndex.CREATED_BY_FIELD, project.getCreatedBy());
-        objectMap.put(ProjectIndex.UPDATED_BY_FIELD, project.getUpdatedBy());
-        objectMap.put(ProjectIndex.CREATED_AT_FIELD, project.getCreatedAt());
-        objectMap.put(ProjectIndex.UPDATED_AT_FIELD, project.getUpdatedAt());
-        objectMap.put(ProjectIndex.ARTEFACTS_FIELD, new Long[0]);
-
-        if (null != project.getArtefacts()) {
-            List<Artefact> artefacts = project.getArtefacts();
-            Long[] arr = new Long[artefacts.size()];
-            for (int i = 0; i < artefacts.size(); i++) {
-                arr[i] = artefacts.get(i).getId();
-            }
-            objectMap.put(ProjectIndex.ARTEFACTS_FIELD, arr);
-        }
-        return objectMap;
-    }**/
 }
